--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
             - name: Build and push Docker image
               uses: docker/build-push-action@v4
               with:
-                  context: .
+                  context: ./backend
                   file: ./backend/Dockerfile
                   push: true
                   tags: |
@@ -31,7 +31,7 @@ jobs:
             - name: Build and push Docker image
               uses: docker/build-push-action@v4
               with:
-                  context: .
+                  context: ./frontend
                   file: ./frontend/Dockerfile
                   push: true
                   tags: |
