--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,8 +4,9 @@ COPY package.json package-lock.json ./
 RUN npm ci
 COPY . .
 ARG API_URL
-ENV VITE_API_URL=$API_URL
+ENV VITE_API_URL=${API_URL}
 RUN npm run build
+
 FROM nginx:alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
